[gd_scene load_steps=13 format=3 uid="uid://0abunyrp3nnm"]

[ext_resource type="StyleBox" uid="uid://b34fa53xo3ue4" path="res://Features/Menus/Button/button_style_box_flat_normal.tres" id="1_6xh3t"]
[ext_resource type="Script" uid="uid://dmajjua2tufbb" path="res://Features/Menus/game_over_screen.gd" id="1_poi6d"]
[ext_resource type="StyleBox" uid="uid://d3wtqiudb7bui" path="res://Features/Menus/Button/button_style_box_flat_hover.tres" id="2_iomnm"]
[ext_resource type="AudioStream" uid="uid://t7ych1kctsq" path="res://Features/Menus/Button/click1.ogg" id="4_8il52"]
[ext_resource type="AudioStream" uid="uid://dyh8crdueg7w3" path="res://Features/Menus/Button/click2.ogg" id="5_ot8ho"]

[sub_resource type="LabelSettings" id="LabelSettings_kx2tk"]
font_size = 46
font_color = Color(0.886893, 0.89263, 0.886373, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 0.439216)
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_fs7pd"]
font_size = 26
font_color = Color(0.886893, 0.89263, 0.886373, 1)
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 0.439216)
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n45kj"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_size = 5
shadow_offset = Vector2(3, 3)

[sub_resource type="LabelSettings" id="LabelSettings_cmou6"]
font_size = 30
font_color = Color(0.886893, 0.89263, 0.886373, 1)
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 15
shadow_color = Color(0, 0, 0, 0.439216)
shadow_offset = Vector2(3, 3)

[sub_resource type="Animation" id="Animation_dicyd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-300, 750)]
}

[sub_resource type="Animation" id="Animation_t2gwe"]
resource_name = "open_popup"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-300, 750), Vector2(-300, -150)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sptpi"]
_data = {
&"RESET": SubResource("Animation_dicyd"),
&"open_popup": SubResource("Animation_t2gwe")
}

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_poi6d")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 750.0
offset_right = 300.0
offset_bottom = 1050.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_6xh3t")

[node name="GameOverText" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -133.0
offset_top = 30.0
offset_right = 133.0
offset_bottom = 94.0
grow_horizontal = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_kx2tk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.0
offset_top = -35.0
offset_right = 271.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "But hey, you earned $100!"
label_settings = SubResource("LabelSettings_fs7pd")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ExitButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.5
offset_top = -107.0
offset_right = 96.5
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/disabled = ExtResource("2_iomnm")
theme_override_styles/hover_pressed = ExtResource("2_iomnm")
theme_override_styles/hover = ExtResource("2_iomnm")
theme_override_styles/pressed = ExtResource("2_iomnm")
theme_override_styles/normal = SubResource("StyleBoxFlat_n45kj")

[node name="ButtonText" type="Label" parent="Panel/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "EXIT"
label_settings = SubResource("LabelSettings_cmou6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sptpi")
}

[node name="ButtonSelect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8il52")

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ot8ho")

[connection signal="mouse_entered" from="Panel/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
